EP - UPDATE CONTROLLERS
